style: Collectors.toList() → Stream.toList()
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>